; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/extr_sched.c_rpc_wake_up_queued_task.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/extr_sched.c_rpc_wake_up_queued_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_wait_queue = type { i32 }
%struct.rpc_task = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rpc_wake_up_queued_task(%struct.rpc_wait_queue* %0, %struct.rpc_task* %1) #0 {
  %3 = alloca %struct.rpc_wait_queue*, align 8
  %4 = alloca %struct.rpc_task*, align 8
  store %struct.rpc_wait_queue* %0, %struct.rpc_wait_queue** %3, align 8
  store %struct.rpc_task* %1, %struct.rpc_task** %4, align 8
  %5 = load %struct.rpc_wait_queue*, %struct.rpc_wait_queue** %3, align 8
  %6 = getelementptr inbounds %struct.rpc_wait_queue, %struct.rpc_wait_queue* %5, i32 0, i32 0
  %7 = call i32 @spin_lock_bh(i32* %6)
  %8 = load %struct.rpc_wait_queue*, %struct.rpc_wait_queue** %3, align 8
  %9 = load %struct.rpc_task*, %struct.rpc_task** %4, align 8
  %10 = call i32 @rpc_wake_up_task_queue_locked(%struct.rpc_wait_queue* %8, %struct.rpc_task* %9)
  %11 = load %struct.rpc_wait_queue*, %struct.rpc_wait_queue** %3, align 8
  %12 = getelementptr inbounds %struct.rpc_wait_queue, %struct.rpc_wait_queue* %11, i32 0, i32 0
  %13 = call i32 @spin_unlock_bh(i32* %12)
  ret void
}

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @rpc_wake_up_task_queue_locked(%struct.rpc_wait_queue*, %struct.rpc_task*) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
